scm-k8s/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  namespace: scm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: asescmacr.azurecr.io/scm-backend:v13
          command: ["celery"]
          args:
            - "-A"
            - "SustainableCityManagement"
            - "beat"
            - "--loglevel=INFO"
            - "--scheduler=django_celery_beat.schedulers:DatabaseScheduler"
