scm-k8s/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: scm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: asescmacr.azurecr.io/scm-backend:latest
          imagePullPolicy: Always
          command: ["celery"]
          args: ["-A", "SustainableCityManagement", "worker", "--loglevel=INFO", "-Q", "celery,ml_queue"]
