scm-k8s/django-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-api
  namespace: scm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-api
  template:
    metadata:
      labels:
        app: django-api
    spec:
      containers:
      - name: django
        image: asescmacr.azurecr.io/scm-backend:v7
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: scm-app
spec:
  selector:
    app: django-api
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
