scm-k8s/backup_scm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scm-ingress
  namespace: scm-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
